--- a/index.html
+++ b/index.html
@@ -191,10 +191,12 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
-            <h3> <i class="fas fa-envelope"></i><a href="mailto:jayhp3105@gmail.com">jayhp3105@gmail.com</a></h3>
-            <h3> <i class="fas fa-phone"></i><a href="tel:+917069925301">7069925301</a> </h3>
-            <h3> <i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/jaykumar-patel-919a69244"  target=”_blank”>click here</a> </h3>
+            <h3> <i class="fas fa-envelope"></i><a href="mailto:jayhp3105@gmail.com" class="blue">jayhp3105@gmail.com</a></h3>
+            <h3> <i class="fas fa-phone"></i><a href="tel:+917069925301" class="blue">7069925301</a> </h3>
             <h3> <i class="fas fa-map-marker-alt"></i><address>kadi,mahesana,Gujarat.</address></h3>
+            <h3> <i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/jaykumar-patel-919a69244" class="blue" target=”_blank”>click here</a> </h3>
+            <h3> <i class="fa fa-github" style="color: #f3da35"></i><a href="https://github.com/jayhp2002/myPortfolio" class="blue" target=”_blank”>click here</a> </h3>
+            <h3> <i class="fa fa-instagram" aria-hidden="true"></i></i><a href="https://instagram.com/jay31052?igshid=YmMyMTA2M2Y=" class="blue" target=”_blank”>click here</a> </h3>
         </div>
 
     </div>
